syntax = "proto3";

package dominoes;

service GameService {
    rpc JoinGame(stream Message) returns (stream Message);
}

enum Side {
    LEFT = 0;
    RIGHT = 1;
}

message Move {
    int32 piece_position = 1;
    int32 player_number = 2;
    Side side = 3;
}

message YourTurn {}

message Piece {
    int32 up = 1;
    int32 down = 2;
}

message Init {
    repeated Piece hand = 1;
    int32 number = 2;
}

message Update {
    Piece piece = 1;
    Side position = 2;
    int32 turn = 3;
}

message Response {
    bool ok = 1;
    string error = 2;
}

message Join {
    string game_id = 1;
}

message Skip {}

message Message {
    oneof content {
        Move move = 1;
        Init init = 2;
        YourTurn you_turn = 3;
        Update update = 4;
        Response response = 5;
        Join join = 6;
        Skip skip = 7;
    }
}